# bevy-vfx-bag

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md
.github/workflows/: basics.yml
assets/materials/: fbm.wgsl  value_noise.wgsl  voronoi.wgsl
assets/shaders/: auto-update-shader.sh  blur.wgsl  blur3.wgsl  chromatic-aberration.wgsl  chromatic-aberration3.wgsl  fbm.wgsl  flip.wgsl  flip3.wgsl  heart.wgsl  lut.wgsl  lut3.wgsl  marble.wgsl  masks.wgsl  masks3.wgsl  math.wgsl  pixelate.wgsl  raindrops.wgsl  tint.wgsl  value_noise.wgsl  vignette.wgsl  vignette2.wgsl  wave.wgsl
examples/: examples_common.rs
examples-old/blur/: main.rs
examples-old/flip/: main.rs
examples-old/pixelate/: main.rs
examples-old/trex/: main.rs
examples-old/wave/: main.rs
examples/blur/: main.rs
examples/chromatic-aberration/: main.rs
examples/flip/: main.rs
examples/hearts/: main.rs
examples/lut/: main.rs
examples/make-neutral-lut/: main.rs
examples/masks/: main.rs
examples/multi_window/: main.rs
examples/noise/: main.rs
examples/pixelate/: main.rs
examples/pixelate2/: main.rs
examples/raindrops/: main.rs
examples/raindrops3/: main.rs
examples/sickly/: main.rs
examples/trex/: main.rs
examples/two_screens/: main.rs
examples/underwater/: main.rs
examples/vignette/: main.rs
examples/wave/: main.rs
scripts/: print_uuids_u64s.sh  random_u64.sh  uuidv4.sh
src/: camera.rs  image.rs  lib.rs  nodes.rs  passthrough.wgsl  plugin.rs  post_processing.rs  post_processing2.rs  quad.rs  util.rs
src/camera/: blur.rs  flip.rs  vignette.rs
src/image/: blur.rs  chromatic_aberration.rs  flip.rs  mask.rs  pixelate.rs  raindrops.rs  rainrops.rs  tint.rs  vignette.rs  wave.rs
src/image/lut/: mod.rs
src/materials/: mod.rs
src/post_processing/: blur.rs  chromatic_aberration.rs  flip.rs  lut.rs  masks.rs  mod.rs  pixelate.rs  raindrops.rs  wave.rs
src/post_processing/chromatic_aberration/: mod.rs
src/post_processing/pixelate/: mod.rs  node.rs  pixelate.wgsl
src/post_processing2/: blur.rs  chromatic_aberration.rs  flip.rs  pixelate.rs  prelude.rs  raindrops.rs  raindrops2.rs  util.rs  v3.rs  wave.rs
src/post_processing2/pixelate/: mod.rs
src/post_processing2/pixelate/shaders/: pixelate.wgsl
src/post_processing2/v3/: blur.rs  chromatic_aberration.rs  flip.rs  lut.rs  masks.rs  pixelate.rs  post_processing_plugin.rs  raindrops.rs  wave.rs
