[package]
name = "bevy-vfx-bag"
version = "0.1.0"
edition = "2021"
description = "An assorted bag of visual effects for Bevy"
categories = ["graphics", "game-development", "rendering"]
keywords = ["vfx", "graphics", "bevy", "gamedev", "wgsl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/torsteingrindvik/bevy-vfx-bag"

exclude = [".github/", "scripts/"]

[features]
# For local development.
# Shaders can now be hot-reloaded.
dev = []

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
    "bevy_asset",
    "render",
    "png",
    "tga",
] }

# bevy = { version = "0.9.0", default-features = false, features = [
#     "bevy_asset",
#     "render",
#     "png",
#     "tga",
# ] }

# TODO: Remove this section when alsa semver issue is fixed
[target.'cfg(unix)'.dependencies]
alsa = "=0.6.0"

[dev-dependencies]
# bevy = { version = "0.9.0", features = ["tga"] }
bevy_mod_debugdump = "0.6.0"
bevy = { path = "../bevy", features = ["tga"] }

color-eyre = "0.6"
image = "0.24"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
