[package]
name = "bevy-vfx-bag"
version = "0.2.0"
edition = "2021"
description = "An assorted bag of visual effects for Bevy"
categories = ["graphics", "game-development", "rendering"]
keywords = ["vfx", "graphics", "bevy", "gamedev", "wgsl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/torsteingrindvik/bevy-vfx-bag"

exclude = [".github/", "scripts/"]

[features]
# For local development.
# Shaders can now be hot-reloaded.
dev = []

[dependencies]
# bevy = { path = "../bevy-main", default-features = false, features = [
#     "bevy_asset",
#     "bevy_render",
#     "bevy_core_pipeline",
#     "png",
#     "tga",
# ] }

bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "png",
    "tga",
] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["tga"] }
# bevy_mod_debugdump = "0.6.0"
# bevy_mod_debugdump = { path = "../bevy_mod_debugdump" }
# bevy = { path = "../bevy-main", features = ["tga"] }

color-eyre = "0.6"
image = "0.24"

once_cell = "1"

[[example]]
name = "two_screens"
path = "examples/two_screens/main.rs"
