[package]
name = "bevy-vfx-bag"
version = "0.2.0"
edition = "2021"
description = "An assorted bag of visual effects for Bevy"
categories = ["graphics", "game-development", "rendering"]
keywords = ["vfx", "graphics", "bevy", "gamedev", "wgsl"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/torsteingrindvik/bevy-vfx-bag"

exclude = [".github/", "scripts/"]

[features]
# For local development.
# Shaders can now be hot-reloaded.
dev = []

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "png",
    "tga",
] }

[dev-dependencies]
bevy = { version = "0.10", features = ["tga"] }
color-eyre = "0.6"
image = "0.24"
once_cell = "1"
